@@ -1,7 +1,9 @@
 python-django (1.0.2-2) UNRELEASED; urgency=low
 
+  * Move to debhelper-based packaging for operational clarity:
+    - Don't rely on the internal layout of python-support (Closes: #517052)
+    - Bump Build-Depends on debhelper to 7.0.50 for override_*.
   * Just Build-Depend on `python', not `python-dev'.
-  * Move to debhelper 7.
   * Drop versions on Build-Depends where they are satisfied in current
     oldstable (ie. etch).
   * Remove repeated 'Priority' line in binary package stanza.
